<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".TrackActivity" >

    <fragment
        android:id="@+id/mapTrack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />
    
    <TextView
        android:id="@+id/txtNomeGara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grigioNomeGara"
        android:background="@color/biancoAlpha" />
    
    <ImageView
        android:id="@+id/imgOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/ImgMapContentDescription" />
    
    <it.xtremesoftware.tracking.Util.CustomDigitalClock
        android:id="@+id/dgtOrario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/grigioNomeGara"
        android:background="@color/biancoAlpha"
        android:text="@string/oraIniziale" />

</RelativeLayout>